--- a/samples/persistent_cloud_anchor_java/app/build.gradle
+++ b/samples/persistent_cloud_anchor_java/app/build.gradle
@@ -55,5 +55,4 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.2.0-alpha02'
     implementation 'com.google.guava:guava:27.0.1-android'
-    implementation 'com.google.android.gms:play-services-auth:19.2.0'
-}
+    implementation("com.google.android.gms:play-services-auth:20.6.0") }
